2008-07-08  Sancho Lerena <slerena@artica.es>

	* operation/reporting/graph_viewer.php: Added controls to view in the
	new combined graphic mode (lines), and to change size to three pre-
	defined sizes.

	* reporting/fgraph.php: Stacked mode support was missing by unknown
	reason. Reactivated. Added a mode to view combined graphs in "wired"
	mode (lines only).
	
	* godmode/agentes/modificar_agente.php: Disabled agents was not shown,
	so was unable to activate again. Fixed. 

	* godmode/reporting/graph_builder.php: Added support for line mode.
	Disabled agents don't shown in combo. Some other minor fixes. Changed
	to show the name of the module, instead of description.

	* include/config.php: Deleted. This file should not be included in SVN
	
	* images/so_aix.png: New icon for AIX systems.

2008-07-07  Esteban Sanchez  <estebans@artica.es>

	* godmode/reporting/graph_builder.php: Tab style correction.

	* godmode/reporting/reporting_builder.php: Button label renamed.

	* include/functions_db.php: Added functions from
	functions_reporting.php.

	* include/functions_reporting.php: Added missing documentation. Added
	check to avoid division by zero on alert_reporting(). Avoid $return
	flag as parameter in some functions.

	* include/functions_reporting_pdf.php: Avoid $return flag when calling
	some functions.
	
	* operation/reporting/reporting_viewer.php: Do not use a span with
	font-size when showing sla report.

2008-07-04  Esteban Sanchez  <estebans@artica.es>

	* operation/reporting/reporting_viewer.php: Added a loading div that
	appears while the page is loading and dissapear once it's completed.

	* include/styles/pandora.css, include/styles/pandora_minimal.css,
	include/styles/pandora_width.css: Added style to loading div.

2008-07-04  Esteban Sanchez  <estebans@artica.es>

	* operation/reporting/reporting_viewer.php: Fixed error when showing
	final SLA result.

	* include/functions_reporting_pdf.php: Added final SLA result.
