@@ -184,6 +184,8 @@ if (mysql_num_rows($result)){
 				$est_modulo = $row_t["estado"]; 
 				$ultimo_contacto_modulo = $row_t["timestamp"];
 				$module_interval = $row_t["module_interval"];
+				$module_type = $row_t["id_tipo_modulo"];
+
 				if ($module_interval > $biginterval)
 					$biginterval = $module_interval;
 				if ($module_interval !=0)
@@ -194,12 +196,17 @@ if (mysql_num_rows($result)){
 					$seconds = strtotime($ahora) - strtotime($ultimo_contacto_modulo);
 				else 
 					$seconds = -1;
-		
+				if (($module_type < 21) OR ($module_type == 100)){
+					$async = 0;
+				} else {
+					$async = 1;
+				}
 				# Defines if Agent is down (interval x 2 > time last contact	
 				if ($seconds >= ($intervalo_comp*2)){ // If (intervalx2) secs. ago we don't get anything, show alert
 					if ($est_modulo != 100)
 						$numero_monitor++;
-					$monitor_down++;
+					if ($async == 0)
+						$monitor_down++;
 				}
 				elseif ($est_modulo != 100) { // estado=100 are data modules
 					$estado_general = $estado_general + $est_modulo;
